# mini-cad

./: .gitignore  .mailmap  CLAUDE.md  LICENSE  README.md  a.txt  build_exe.ps1  opis.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1  run.sh
.github/workflows/: release.yml
cad_app/: __init__.py  __main__.py  app.py  command_common.py  command_convex.py  command_geometry.py  command_rounding.py  command_topology.py  command_vectors.py  commands.py  config.py  engine.py  env.py  feature_history.py  gui_contract.py  io_project.py  io_step.py  main_window.py  measurement.py  navigation.py  picker.py  platform_runtime.py  profiles.py  scene.py  sketch.py  sketch_features.py  sketch_graph.py  sketch_regions.py  sketch_snapping.py  theme.py  thread_specs.py  types.py  ui_actions.py  ui_chrome.py  ui_layout.py  ui_menu.py  ui_sessions.py  viewer.py  viewer_constants.py  viewer_markers.py  (+22 more)
dev/: __init__.py  build_box_workflow.py  build_house_workflow.py  build_vase_workflow.py  duck_chain_donuts_workflow.py  duck_pot_workflow.py  generate_tutorial_gifs.py  mama_opens_cad_check.py  record_verification_tutorials.py  rotate_pivot_workflow.py  run_cad_safety_tests.py  sketch_tools_workflow.py  smoke_sketch_workflow.py  test_thread_defaults_workflow.py  trim_circles_workflow.py  trim_extrude_workflow.py  trim_stress_workflow.py  user_log_replay_workflow.py  ux_user_walkthrough_check.py  visual_window_probe.py
docs/: ARCHITECTURE.md  CLICKING_CONTRACT.md  PRODUCT_CONTRACT.md  README.md  START_HERE.md  TESTING.md  VISUAL_TESTING.md  human_visual_smoke_test.md  magiclantern-12bit-hires-pseudo-tests.md  testing_strategy.md  ux_user_walkthrough.md  visual_redesign.md
docs/tutorials/: README.md
packaging/: mini-cad.spec
tests/: __init__.py  conftest.py  test_command_contract_matrix.py  test_commands.py  test_engine_shapes.py  test_env_health.py  test_imports.py  test_main_window_logic.py  test_navigation_logic.py  test_picker_logic.py  test_random_command_sequences.py  test_scene_model.py  test_sketch.py  test_step_io.py  test_ui_state_contracts.py  test_user_workflows.py  test_viewer_click_integration.py  test_viewer_logic.py
tests/cad_safety/: __init__.py  contracts.py  harness.py  invariants.py  snapshots.py
tests/core/: test_direct_modeling_regressions.py  test_extrude_open_shell.py  test_feature_history_contracts.py  test_geometry_contracts.py  test_navigation_contracts.py  (+7 more)
(+16 files in other folders)
