[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cad_app"
version = "0.1.0"
description = "mini-cad - a small, hackable direct-modeling CAD prototype"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Pawel Zduniak", email = "pawel.zduniak@gmail.com" },
]
dependencies = [
  "PySide6",
  "cadquery-ocp",
  "build123d",
  "shapely",
]

[project.scripts]
cad-app = "cad_app.app:run"

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "Pillow",
]

[tool.setuptools.packages.find]
include = ["cad_app*"]

[tool.setuptools.package-data]
cad_app = ["assets/icons/*.png"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
